--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "mocha . --exit",
-    "start": "node index.js",
+    "start": "node index.js --ignore client",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -14,7 +14,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.7"
   },
   "devDependencies": {
     "eslint-config-salt": "^1.2.0"
