--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "test": "mocha . --exit",
     "start": "node index.js --ignore client",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "Negar Latifian",
