--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "minilink",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "https://minilink-l48s.onrender.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
